--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div id="quiz-area" class="col-md-3 col-xs-12">
-      <h3>Quiz Results</h3>
+      <h3>Surveys & Quizzes</h3>
       <div id="quiz-content">
         <canvas id="quiz-results-chart" width="400" height="400"></canvas>
         <div id="quiz-stats">
