Update icon and branding info

--- a/views/pages/attendee.ejs
+++ b/views/pages/attendee.ejs
@@ -143,7 +143,7 @@
   <div class="row">
     <div id="attendee-submissions" class="col-md-5 col-xs-12">
       <div id="section-a">
-        <h4><i class="fa-title fa fa-comment"></i>&nbsp;Submit Comments and Questions</h4>
+        <h4><i class="fa-title fa fa-comment"></i>Submit Comments and Questions</h4>
         <div class="top-row row">
           <input id="name-field" placeholder="Enter your name (or leave blank to remain anonymous)"></input>
         </div>
@@ -157,7 +157,7 @@
     </div>
     <div id="attendee-voting" class="col-md-4 col-xs-12">
       <div id="section-b">
-        <h4><i class="fa-title fa fa-comments"></i>&nbsp;Vote On The Discussion</h4>
+        <h4><i class="fa-title fa fa-comments"></i>Vote On The Discussion</h4>
         <div id="user-voting">
 
         </div>
@@ -165,7 +165,7 @@
     </div>
     <div id="attendee-quiz" class="col-md-3 col-xs-12">
       <div id="section-c">
-        <h4><i class="fa-title fa fa-list"></i>&nbsp;Clicker</h4>
+        <h4><i class="fa-title fa fa-list"></i>Clicker</h4>
         <div id="user-quiz">
 
         </div>
