--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -61,7 +61,7 @@
     padding: 10px;
     margin: 5px;
     font-weight: 100;
-    font-size: 1em;
+    font-size: 1.5em;
     border-radius: 10px;
     transition: 300ms ease-in-out background-color;
     display: inline-block;
@@ -146,7 +146,7 @@
     </div>
     <div class="col-md-4 col-sm-12 col-xs-12">
       <div id="section-b">
-        <h4><i class="fa-title fa fa-comments"></i>&nbsp;Approvals</h4>
+        <h4><i class="fa-title fa fa-comments"></i>Approvals</h4>
         <div id="unapproved-questions">
 
         </div>
@@ -154,7 +154,7 @@
     </div>
     <div class="col-md-4 col-sm-12 col-xs-12">
       <div id="section-c">
-        <h4><i class="fa-title fa fa-bullhorn"></i>&nbsp;Live</h4>
+        <h4><i class="fa-title fa fa-bullhorn"></i>Live</h4>
         <div id="approved-questions">
 
         </div>
@@ -162,7 +162,7 @@
     </div>
     <div class="col-md-4 col-sm-12 col-xs-12">
       <div id="section-d">
-        <h4><i class="fa-title fa fa-list"></i>&nbsp;Surveys and Quizzes</h4>
+        <h4><i class="fa-title fa fa-list"></i>Surveys and Quizzes</h4>
         <div id="quiz-results">
 
         </div>
