--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/head.ejs -->
 <meta charset="utf-8">
-<title>CFL Interactive Learning System</title>
+<title>Interactive Learning System</title>
 <meta name="description" content="Interactive learning system for UTSC CFL">
 <meta name="author" content="Nafeu Nasir">
 <link rel="stylesheet" href="lib/flexboxgrid.min.css" type="text/css" >
