--- a/views/partials/page-header.ejs
+++ b/views/partials/page-header.ejs
@@ -1,1 +1,1 @@
-<div class="page-header"><img class="logo" src="assets/logo.svg"><span class="thin-info">CFL</span> <span class="bold-info">Interactive Learning System</span></div>
+<div class="page-header"><img class="logo" src="assets/logo.svg"><span class="thin-info">Interactive</span> <span class="bold-info">Learning System</span></div>
