--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -206,9 +206,10 @@ h4 {
 
 .fa-title {
   padding: 10px;
-  border: 2px solid white;
+  border: 1px solid white;
   border-radius: 5px;
   margin-right: 10px;
+  float: left;
 }
 
 /* ==========================================================================
