--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -47,6 +47,13 @@
     margin-bottom: 5px;
   }
 
+  #video-area {
+    z-index: 9;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
 </style>
 <body>
   <div id="content" class="row">
@@ -68,7 +75,9 @@
       </div>
     </div>
   </div>
-  <% include ../partials/modal %>
+  <div id="video-area">
+    <div id="player"></div>
+  </div>
   <script src="js/viewer.js"></script>
   <% include ../partials/footer %>
 </body>
