--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,4 +12,5 @@
 <script src="lib/pdf.min.js"></script>
 <script src="lib/jquery.min.js"></script>
 <script src="lib/Chart.min.js"></script>
+<script src="https://www.youtube.com/iframe_api"></script>
 <script src="js/helpers.js"></script>
