--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<div class="page-footer color-dark-grey">Safieh Moghaddam, University of Toronto Scarborough - Centre for French & Linguistics</div>
+<div class="page-footer color-dark-grey">This project is supported by the CFL, CTL, and Provost's Office OUCI Funding</div>
