--- a/views/pages/instructor.ejs
+++ b/views/pages/instructor.ejs
@@ -142,8 +142,10 @@
           <div class="action-btn" onclick="emitZoomIn(this)"><i class="fa fa-expand"></i></div>
           <div class="action-btn" onclick="emitZoomOut(this)"><i class="fa fa-compress"></i></div>
           <div class="action-btn" onclick="emitOpenVideo(this)"><i class="fa fa-youtube"></i></div>
-          <div class="action-btn" onclick="emitPausePlayVideo(this)"><i class="fa fa-play"></i><i class="fa fa-pause"></i></div>
+          <div class="action-btn" onclick="emitPausePlayVideo(this)"><i class="fa fa-play"></i>&nbsp;<i class="fa fa-pause"></i></div>
           <div class="action-btn" onclick="emitCloseVideo(this)"><i class="fa fa-window-close"></i></div>
+          <div class="action-btn" onclick="emitStartTicket(this)"><i class="fa fa-play"></i>&nbsp;<i class="fa fa-ticket"></i></div>
+          <div class="action-btn" onclick="emitEndTicket(this)"><i class="fa fa-stop"></i>&nbsp;<i class="fa fa-ticket"></i></div>
         </div>
       </div>
     </div>
