--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,5 +1,19 @@
 <div id="modal-container">
   <div id="modal-content">
-
+    <form method="POST" action="/exit">
+      <input type="checkbox" name="ticket-a" value="yes">
+      <label for="ticket-a">I have a better understanding of concord agreement in languages now.</label><br>
+      <input type="checkbox" name="ticket-b" value="yes">
+      <label for="ticket-b">I learned something new about linguistic universals today.</label><br>
+      <input type="checkbox" name="ticket-c" value="yes">
+      <label for="ticket-c">I found the selected data interesting and useful.</label><br>
+      <input type="checkbox" name="ticket-d" value="yes">
+      <label for="ticket-d">I would like to see this type of interaction in our future lectures more.</label><br>
+      <input type="checkbox" name="ticket-e" value="yes">
+      <label for="ticket-e">I enjoyed the way the instructor presented the material.</label><br>
+      <input type="checkbox" name="ticket-f" value="yes">
+      <label for="ticket-f">I would like to see a short review of the Arabic data in our next class.</label><br>
+      <input id="ticket-submit" type="submit" value="Submit">
+    </form>
   </div>
 </div>
