Minor style fixes

--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -50,7 +50,7 @@
 
   #quiz-stats p {
     color: white;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 100;
     margin: 0px;
     margin-bottom: 5px;
@@ -83,11 +83,13 @@
   #questions-area {
     border-bottom: 15px solid #576574;
     border-top: 15px solid #576574;
+    overflow: hidden;
   }
 
   #quiz-area {
     border-bottom: 15px solid #e84118;
     border-top: 15px solid #e84118;
+    overflow: hidden;
   }
 
   .opacity-50 {
