Update background color, footer and urls

--- a/views/pages/viewer.ejs
+++ b/views/pages/viewer.ejs
@@ -105,7 +105,7 @@
     <div id="questions-area" class="col-md-3 col-xs-12">
       <div id="interaction-info">
         <img src="assets/logo.svg">
-        <div class="info-title"><span class="thin-info opacity-50">Connect to</span><br><span class="bold-info">cfl-interactive.herokuapp.com/attendee</span><br><span class="thin-info opacity-50">to ask questions, comment and participate!</span><br>...</div>
+        <div class="info-title"><span class="thin-info opacity-50">Connect to</span><br><span class="bold-info">nafeu-ils.herokuapp.com/attendee</span><br><span class="thin-info opacity-50">to ask questions, comment and participate!</span><br>...</div>
       </div>
       <h3>Questions & Comments</h3>
       <div id="questions-content">
@@ -115,7 +115,7 @@
     <div id="quiz-area" class="col-md-3 col-xs-12">
       <div id="interaction-info">
         <img src="assets/logo.svg">
-        <div class="info-title"><span class="thin-info opacity-50">Connect to</span><br><span class="bold-info">cfl-interactive.herokuapp.com/attendee</span><br><span class="thin-info opacity-50">to submit survey and quiz responses!</span><br>...</div>
+        <div class="info-title"><span class="thin-info opacity-50">Connect to</span><br><span class="bold-info">nafeu-ils.herokuapp.com/attendee</span><br><span class="thin-info opacity-50">to submit survey and quiz responses!</span><br>...</div>
       </div>
       <h3>Survey & Quiz Results</h3>
       <div id="quiz-content">
